small updates to support even spacing around page elements and a fix for wrapping on ds6 pagination

--- a/src/less/pagination/ds6/pagination.less
+++ b/src/less/pagination/ds6/pagination.less
@@ -6,6 +6,7 @@
 .pagination {
     align-items: center;
     display: inline-flex;
+    min-width: 376px;
 }
 
 .pagination a,
@@ -14,11 +15,18 @@
     font-size: @ds6-font-size-16;
 }
 
+.pagination__items {
+    > li:not([hidden]) {
+        width: 56px;
+    }
+}
+
 .pagination__item {
     box-sizing: border-box;
     font-size: @ds6-font-size-14;
     font-weight: 700;
     line-height: 48px;
+    margin: 0 4px;
     width: 48px;
 
     &:visited {
